cmake_minimum_required(VERSION 3.20)
project(cluster_work)

set(CMAKE_CXX_STANDARD 14)

add_executable(cluster_work main.cpp Cure3.h Cure3.cpp Silhouette.h Silhouette.cpp Cure2.h Cure2.cpp temple.h Cure1.h Cure1.cpp DBSCANClusterAnalysis1.h DBSCANClusterAnalysis3.h DBSCANDataPoint3.h DBSCANDataPoint1.h DBSCANClusterAnalysis2.h DBSCANDataPoint2.h Kmeans.h FCM1.h FCM1.cpp Kmeans_plus1.h Kmeans_plus1.cpp KmPoint1.h KmLib1.h Kmeans_plus2.h Kmeans_plus2.cpp KmPoint2.h KmLib2.h Kmeans_plus3.h Kmeans_plus3.cpp KmPoint3.h KmLib3.h Correct.h)
